--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -5,15 +5,159 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
+
+	<title>OFCE AUTO</title>
+	<link href="{$basePath}/assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{$basePath}/assets/font-awesome/css/font-awesome.css" rel="stylesheet">
+	<link href="{$basePath}/assets/css/animate.css" rel="stylesheet">
+	<link href="{$basePath}/assets/css/style.css" rel="stylesheet">
+	<link href="{$basePath}/assets/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+	{*DATAGRID*}
+	<link rel="stylesheet" type="text/css" href="{$basePath}/assets/bower_components/happy/dist/happy.css">
+	<link rel="stylesheet" type="text/css"
+		  href="{$basePath}/assets/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css">
+	<link rel="stylesheet" type="text/css"
+		  href="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid.css">
+	<link rel="stylesheet" type="text/css"
+		  href="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid-spinners.css">
+	<link rel="stylesheet" type="text/css" href="{$basePath}/assets/bower_components/bootstrap-select/dist/css/bootstrap-select.css">
 </head>
 
 <body>
-	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
 
-	{include content}
+<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
 
-	{block scripts}
-	<script src="https://nette.github.io/resources/js/netteForms.min.js"></script>
-	{/block}
+<div id="wrapper">
+
+	<nav class="navbar-default navbar-static-side" role="navigation">
+		<div class="sidebar-collapse">
+			<ul class="nav metismenu" id="side-menu">
+				<li class="nav-header">
+					<div class="dropdown profile-element">
+						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                            <span class="clear"> <span class="block m-t-xs"> <strong
+											class="font-bold">David Williams</strong>
+                             </span> <span class="text-muted text-xs block">Art Director <b
+											class="caret"></b></span> </span> </a>
+						<ul class="dropdown-menu animated fadeInRight m-t-xs">
+							<li><a href="#">Logout</a></li>
+						</ul>
+					</div>
+					<div class="logo-element">
+						IN+
+					</div>
+				</li>
+				{dump $menu}
+				{foreach $menu as $key => $menuItem}
+					<li>
+						{if array_key_exists('submenu', $menuItem)}
+						<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span class="nav-label">{$menuItem['label']}</span><span class="fa arrow"></span></a>
+						<ul class="nav nav-second-level collapse">
+							{foreach $menuItem['submenu'] as $submenuKey => $submenuItem}
+								<li><a href="{plink $submenuItem['link']}"><i class="fa fa-{$submenuItem['icon']}"></i>{$submenuItem['label']}</a></li>
+							{/foreach}
+						</ul>
+						{else}
+							<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span class="nav-label">{$menuItem['label']}</span></a>
+						{/if}
+					</li>
+				{/foreach}
+				{*<li class="active">*}
+					{*<a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Main view</span></a>*}
+				{*</li>*}
+				{*<li>*}
+					{*<a href="minor.html"><i class="fa fa-th-large"></i> <span class="nav-label">Minor view</span> </a>*}
+				{*</li>*}
+				{*<li>*}
+					{*<a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Graphs</span><span class="fa arrow"></span></a>*}
+					{*<ul class="nav nav-second-level collapse">*}
+						{*<li><a href="graph_flot.html">Flot Charts</a></li>*}
+						{*<li><a href="graph_morris.html">Morris.js Charts</a></li>*}
+						{*<li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>*}
+						{*<li><a href="graph_chartjs.html">Chart.js</a></li>*}
+						{*<li><a href="graph_chartist.html">Chartist</a></li>*}
+						{*<li><a href="c3.html">c3 charts</a></li>*}
+						{*<li><a href="graph_peity.html">Peity Charts</a></li>*}
+						{*<li><a href="graph_sparkline.html">Sparkline Charts</a></li>*}
+					{*</ul>*}
+				{*</li>*}
+			</ul>
+
+		</div>
+	</nav>
+
+	<div id="page-wrapper" class="gray-bg">
+		<div class="row border-bottom">
+			<nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
+				<div class="navbar-header">
+					<a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
+					</a>
+					<form role="search" class="navbar-form-custom" method="post" action="#">
+						<div class="form-group">
+							<input type="text" placeholder="Search for something..." class="form-control"
+								   name="top-search" id="top-search">
+						</div>
+					</form>
+				</div>
+				<ul class="nav navbar-top-links navbar-right">
+					<li>
+						<a href="#">
+							<i class="fa fa-sign-out"></i> Log out
+						</a>
+					</li>
+				</ul>
+
+			</nav>
+		</div>
+		<div class="wrapper wrapper-content animated fadeInRight container">
+			{include content}
+		</div>
+		<div class="footer">
+			<div class="pull-right">
+			</div>
+			<div>
+				<strong>Copyright</strong> Example Company &copy; 2014-2017
+			</div>
+		</div>
+
+	</div>
+</div>
+
+<script src="{$basePath}/assets/js/jquery-3.1.1.min.js"></script>
+<script src="{$basePath}/assets/js/bootstrap.min.js"></script>
+<script src="{$basePath}/assets/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="{$basePath}/assets/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="{$basePath}/assets/js/inspinia.js"></script>
+<script src="{$basePath}/assets/js/plugins/pace/pace.min.js"></script>
+<script src="{$basePath}/assets/js/live-form-validation.js"></script>
+<script src="{$basePath}/assets/js/nette.ajax.js"></script>
+<script src="{$basePath}/assets/js/moment.min.js"></script>
+
+<script src="{$basePath}/assets/bower_components/happy/dist/happy.js"></script>
+<script src="{$basePath}/assets/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
+<script src="{$basePath}/assets/bower_components/jquery-ui-sortable/jquery-ui-sortable.js"></script>
+<script src="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid.js"></script>
+<!-- It is recommended to include this JS file with just a few bits. It refreshes URL on non ajax request -->
+<script src="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid-instant-url-refresh.js"></script>
+<!-- Use this little extension for ajax spinners -->
+<script src="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid-spinners.js"></script>
+<!-- Include bootstrap-select.js when using FilterMultiSelect (silviomoreto.github.io/bootstrap-select) -->
+<script src="{$basePath}/assets/bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
+<script src="{$basePath}/assets/js/bootstrap-datetimepicker.min.js"></script>
+
+<script>
+    $.nette.init();
+    $('.datetime-picker').datetimepicker();
+    $('select').selectpicker({});
+</script>
+
+<script type="text/javascript">
+    $(function () {
+    });
+</script>
+
+
+
 </body>
 </html>
