--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -21,12 +21,25 @@
 		  href="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid.css">
 	<link rel="stylesheet" type="text/css"
 		  href="{$basePath}/assets/bower_components/ublaboo-datagrid/assets/dist/datagrid-spinners.css">
-	<link rel="stylesheet" type="text/css" href="{$basePath}/assets/bower_components/bootstrap-select/dist/css/bootstrap-select.css">
+	<link rel="stylesheet" type="text/css"
+		  href="{$basePath}/assets/bower_components/bootstrap-select/dist/css/bootstrap-select.css">
 </head>
 
 <body>
 
-<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">
+
+</div>
+{foreach $flashes as $flash}
+	<script>
+        $.notify({
+            message: {$flash->message}
+        }, {
+            // settings
+            type: {$flash->type}
+        });
+	</script>
+{/foreach}
 
 <div id="wrapper">
 
@@ -41,7 +54,7 @@
                              </span> <span class="text-muted text-xs block">Art Director <b
 											class="caret"></b></span> </span> </a>
 						<ul class="dropdown-menu animated fadeInRight m-t-xs">
-							<li><a href="#">Logout</a></li>
+							<li><a n:href="logout!">Logout</a></li>
 						</ul>
 					</div>
 					<div class="logo-element">
@@ -49,39 +62,25 @@
 					</div>
 				</li>
 				{dump $menu}
+				{dump $presenter}
 				{foreach $menu as $key => $menuItem}
 					<li>
 						{if array_key_exists('submenu', $menuItem)}
-						<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span class="nav-label">{$menuItem['label']}</span><span class="fa arrow"></span></a>
-						<ul class="nav nav-second-level collapse">
-							{foreach $menuItem['submenu'] as $submenuKey => $submenuItem}
-								<li><a href="{plink $submenuItem['link']}"><i class="fa fa-{$submenuItem['icon']}"></i>{$submenuItem['label']}</a></li>
-							{/foreach}
-						</ul>
+							<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span
+										class="nav-label">{$menuItem['label']}</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level collapse">
+								{foreach $menuItem['submenu'] as $submenuKey => $submenuItem}
+									<li><a href="{plink $submenuItem['link']}"><i
+													class="fa fa-{$submenuItem['icon']}"></i>{$submenuItem['label']}</a>
+									</li>
+								{/foreach}
+							</ul>
 						{else}
-							<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span class="nav-label">{$menuItem['label']}</span></a>
+							<a href="{plink $menuItem['link']}"><i class="fa fa-{$menuItem['icon']}"></i> <span
+										class="nav-label">{$menuItem['label']}</span></a>
 						{/if}
 					</li>
 				{/foreach}
-				{*<li class="active">*}
-					{*<a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Main view</span></a>*}
-				{*</li>*}
-				{*<li>*}
-					{*<a href="minor.html"><i class="fa fa-th-large"></i> <span class="nav-label">Minor view</span> </a>*}
-				{*</li>*}
-				{*<li>*}
-					{*<a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Graphs</span><span class="fa arrow"></span></a>*}
-					{*<ul class="nav nav-second-level collapse">*}
-						{*<li><a href="graph_flot.html">Flot Charts</a></li>*}
-						{*<li><a href="graph_morris.html">Morris.js Charts</a></li>*}
-						{*<li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>*}
-						{*<li><a href="graph_chartjs.html">Chart.js</a></li>*}
-						{*<li><a href="graph_chartist.html">Chartist</a></li>*}
-						{*<li><a href="c3.html">c3 charts</a></li>*}
-						{*<li><a href="graph_peity.html">Peity Charts</a></li>*}
-						{*<li><a href="graph_sparkline.html">Sparkline Charts</a></li>*}
-					{*</ul>*}
-				{*</li>*}
 			</ul>
 
 		</div>
@@ -102,7 +101,7 @@
 				</div>
 				<ul class="nav navbar-top-links navbar-right">
 					<li>
-						<a href="#">
+						<a n:href="logout!">
 							<i class="fa fa-sign-out"></i> Log out
 						</a>
 					</li>
@@ -145,19 +144,13 @@
 <!-- Include bootstrap-select.js when using FilterMultiSelect (silviomoreto.github.io/bootstrap-select) -->
 <script src="{$basePath}/assets/bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
 <script src="{$basePath}/assets/js/bootstrap-datetimepicker.min.js"></script>
+<script src="{$basePath}/assets/js/bootstrap-notify.min.js"></script>
 
 <script>
     $.nette.init();
     $('.datetime-picker').datetimepicker();
     $('select').selectpicker({});
 </script>
-
-<script type="text/javascript">
-    $(function () {
-    });
-</script>
-
-
 
 </body>
 </html>
