--- a/app/presenters/templates/Login/register.latte
+++ b/app/presenters/templates/Login/register.latte
@@ -19,11 +19,7 @@
 		<h3>OFCE AUTO</h3>
 		<p>
 		</p>
-		{control loginForm}
-		<div class="m-t">
-			<p class="text-muted text-center"><small>Do not have an account?</small></p>
-			<a class="btn btn-sm btn-white btn-block" n:href="register">Create an account</a>
-		</div>
+		{control registrationForm}
 		<p class="m-t"> <small>OFCE COPYRIGHT :D</small> </p>
 	</div>
 </div>
