--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -112,13 +112,13 @@
 		<div class="wrapper wrapper-content animated fadeInRight container">
 			{include content}
 		</div>
-		<div class="footer">
-			<div class="pull-right">
-			</div>
-			<div>
-				<strong>Copyright</strong> Example Company &copy; 2014-2017
-			</div>
-		</div>
+		{*<div class="footer">*}
+			{*<div class="pull-right">*}
+			{*</div>*}
+			{*<div>*}
+				{*<strong>Copyright</strong> Example Company &copy; 2014-2017*}
+			{*</div>*}
+		{*</div>*}
 
 	</div>
 </div>
