--- a/app/presenters/templates/System/users.latte
+++ b/app/presenters/templates/System/users.latte
@@ -24,4 +24,17 @@
 			{control userGroupsGrid}
 		</div>
 	</div>
+
+	<div class="row wrapper border-bottom white-bg page-heading">
+		<div class="col-md-12">
+			<h1>Roles</h1>
+		</div>
+	</div>
+
+	<div class="wrapper wrapper-content animated fadeInRight container">
+		<div class="col-md-12">
+			<a n:href="editRole" class="btn btn-primary grid-button">New role</a>
+			{control rolesGrid}
+		</div>
+	</div>
 {/block}
