--- a/app/components/other/menu/MenuControl.latte
+++ b/app/components/other/menu/MenuControl.latte
@@ -3,9 +3,11 @@
 		<a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="clear"> <span class="block m-t-xs"> <strong
 											class="font-bold">{$loggedUser->getName()}</strong>
-                             </span> <span class="text-muted text-xs block">{$loggedUser->getRole()->getName()}
+								</span> <span class="text-muted text-xs block">{$loggedUser->getRole()->getName()}</span>
+							</span>
+		</a>
 	</div>
 	<div class="logo-element">
-		IN+
+		OFCE
 	</div>
 </li>
